--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,4 +21,4 @@ steps:
     script: |
       # Write your commands here
       
-      echo 'Hello world, hello $name'
+      echo 'Hello world, hello $(NAME)'
