--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,16 +9,27 @@ trigger:
 pool:
   vmImage: 'ubuntu-latest'
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '12.13.0'
-  displayName: 'Install Node.js'
+stages:
+- stage: Build
+  displayName: Build Stage
+  jobs:
+  - job: Build
+    displayName: Build Job
+    steps:
+      - task: NodeTool@0
+        inputs:
+          versionSpec: '12.13.0'
+        displayName: 'Install Node.js'
 
-- task: Bash@3
-  inputs:
-    targetType: 'inline'
-    script: |
-      # Write your commands here
-      
-      echo 'Hello world, hello $(NAME)'
+- stage: Deploy
+  displayName: Deploy Stage
+  jobs: 
+   - job: Deploy
+     displayName: Deploy Job
+     steps:
+       - task: Bash@3
+         inputs:
+          targetType: 'inline'
+          script: |
+            # Write your commands here      
+              echo 'Hello world, hello $(NAME)'
