Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,7 @@ stages:
 
 - stage: Deploy
   displayName: Deploy Stage
+  dependsOn: Build
   jobs: 
    - job: Deploy
      displayName: Deploy Job
